src/main/resources/sf-resource/SfServerPkgs/objects/Package__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParentPackageID__c</fullName>
        <externalId>true</externalId>
        <label>ParentPackageID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuickDeploy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QuickDeploy</label>
        <referenceTo>Quick_Deploy__c</referenceTo>
        <relationshipLabel>Package</relationshipLabel>
        <relationshipName>QuickDeploy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Deployment_Complete_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Deployment Complete email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Package</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>